name:                exampleApp
version:             0.1.0.0
synopsis:            An app to demonstrate using ses-html-snaplet
description:         An app to demonstrate using ses-html-snaplet
author:              David Johnson
maintainer:          djohnson.m@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable exampleApp
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , snap
                     , ses-html-snaplet
                     , lens
                     , bytestring
  default-language:    Haskell2010
